Check optimistic locking for implicitly deleted relationship entities

--- a/neo4j-ogm-docs/src/main/asciidoc/reference/annotations.adoc
+++ b/neo4j-ogm-docs/src/main/asciidoc/reference/annotations.adoc
@@ -476,6 +476,7 @@ Optimistic locking check is performed for
 * updating properties of nodes and relationship entities
 * deleting nodes via `Session.delete(T)`
 * deleting relationship entities via `Session.delete(T)`
+* deleting relationship entities detected through `Session.save(T)`
 
 When an optimistic locking failure happens following operations are performed on the Session:
 
